fix too many redirects issue.  fix more layout problems
git-svn-id: https://svn.code.sf.net/p/freeghost/code/trunk@3901 71f96598-fa45-0410-b640-bcd6f8691b32

--- a/packages/web/management/css/default/fog.css
+++ b/packages/web/management/css/default/fog.css
@@ -578,10 +578,9 @@ pre {
     background-image: url('images/statusbg.jpg');
     margin: 5px 5px 6px 0;
     width: 237px;
-    float: left;
     padding: 2px;
     overflow: hidden;
-    display: inline-flex;
+    display: inline-block;
 }
 .dashboard p {
     vertical-align: center;
